INT-337 fix problem with th overlap in IE10 on portal

--- a/sugarcrm/styleguide/less/clients/portal/custom.less
+++ b/sugarcrm/styleguide/less/clients/portal/custom.less
@@ -190,3 +190,25 @@ ul.nav.nav-tabs li.activity > p {
   float: left;
   margin: 0 1em 0 2em;
 }
+
+.sorting_asc,
+.sorting_desc,
+.sorting {
+  span {
+    margin-right: auto;
+    position: static !important;
+  }
+  span::after{
+      right: 4px;
+      top: 15px;
+  }
+}
+.dataTable th{
+    padding-right: 16px;
+    position: relative;
+}
+.sorting_desc{
+    span::after{
+        top: 21px;
+    }
+}
